<resources>
    <string name="app_name">MoodChan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_login">Hello blank fragment</string>
    <string name="img_normal">normal</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="signup">signup</string>
    <string name="signout">signout</string>
    <string name="font_fontFamily_medium">sans-serif</string>
    <string name="send_button">send</string>
    <string name="message">message</string>
</resources>
